--- a/ejercicio.html
+++ b/ejercicio.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Ejercicio GityGitHub</h1>
+    <p>esto es un primer cambio</p>
+    <p>esto es un segundo cambio</p>
+
     
 </body>
 </html>
